--- a/css/style.css
+++ b/css/style.css
@@ -13,13 +13,13 @@
 }
 /* header */
 header {
-  background-color: aquamarine;
+  background-color: cornflowerblue;
   background-image: url("../img/pattern.png");
   background-size: 450px;
 }
 .logo {
-  height: 90px;
-  margin-top: 20px;
+  height: 50px;
+  margin-top: 40px;
 }
 
 /* main */
@@ -34,7 +34,7 @@ main {
   color: gray;
 }
 .autore span {
-  color: lightblue;
+  color: dodgerblue;
 }
 .data {
   font-size: 12px;
@@ -51,4 +51,46 @@ main {
 }
 .list {
   margin-top: 20px;
+}
+table {
+  margin-top: 20px;
+  border-spacing: 0;
+}
+
+table .text {
+  width: 50%;
+}
+
+table th {
+  text-align: left;
+}
+
+table thead {
+  background-color: dodgerblue;
+  color: white;
+}
+
+table .dispari {
+  background-color: lightskyblue;
+}
+/* footer */
+footer {
+  margin-top: 20px;
+}
+.pi {
+  color: gray;
+}
+.back-img {
+  width: 200px;
+  height: 150px;
+  color: white;
+  font-size: 20px;
+  background-size: cover;
+  margin-top: 10px;
+}
+#computer {
+  background-image: url("../img/monitor.jpg");
+}
+#graph {
+  background-image: url("../img/graph.jpg");
 }
